--- a/estilo/style.css
+++ b/estilo/style.css
@@ -66,6 +66,7 @@ nav > a{
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
+    font-size: 0.8em;
 }
 nav >a:hover{
     background-color: var(--cor2);
